--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <h2 class="form__title">QCRM</h2><span class="form__subtitle">by SupportYourApp</span>
       <form class="form-login" action="#" method="post">
-        <input class="login form-login__input" type="text" placeholder="Password">
+        <input class="login form-login__input" type="text" placeholder="Name">
         <input class="password form-login__input" type="password" placeholder="Password">
         <div class="form-login__agreement">
           <input class="form-login__checkbox" type="checkbox" id="checkbox">
